# shortwave

./: .deny.toml  .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md  meson.build
build-aux/: checks.sh  de.haeckerfelix.Shortwave.Devel.json  pre-commit.hook
data/: de.haeckerfelix.Shortwave.desktop.in.in  de.haeckerfelix.Shortwave.gresource.xml.in  de.haeckerfelix.Shortwave.gschema.xml.in  de.haeckerfelix.Shortwave.metainfo.xml.in.in  de.haeckerfelix.Shortwave.service.in  meson.build
data/database/migrations/2021-11-09-134911_local_favicons/: down.sql  up.sql
data/gtk/: create_station_dialog.ui  discover_page.ui  featured_carousel.ui  help_overlay.ui  library_page.ui  mini_controller.ui  player.ui  search_page.ui  settings_window.ui  sidebar_controller.ui  song_listbox.ui  song_row.ui  station_dialog.ui  station_row.ui  streaming_dialog.ui  style.css  toolbar_controller.ui  window.ui
debian/: changelog  control  copyright  rules
debian/upstream/: metadata.ex
po/: LINGUAS  POTFILES.in  be.po  ca.po  cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ka.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
src/: app.rs  config.rs.in  i18n.rs  main.rs  meson.build  path.rs
src/api/: client.rs  error.rs  favicon_downloader.rs  mod.rs  station.rs  station_metadata.rs  station_request.rs  stats.rs
src/audio/: gcast_discoverer.rs  mod.rs  player.rs
src/audio/backend/: gstreamer_backend.rs  mod.rs  song_backend.rs
src/audio/controller/: gcast_controller.rs  inhibit_controller.rs  mini_controller.rs  mod.rs  mpris_controller.rs  sidebar_controller.rs  toolbar_controller.rs
src/database/: connection.rs  library.rs  models.rs  queries.rs  schema.rs
src/model/: station_model.rs  station_sorter.rs
src/settings/: key.rs  settings_manager.rs  settings_window.rs
src/ui/: about_window.rs  create_station_dialog.rs  featured_carousel.rs  mod.rs  song_listbox.rs  song_row.rs  station_dialog.rs  station_favicon.rs  station_flowbox.rs  station_row.rs  streaming_dialog.rs  window.rs
src/ui/pages/: discover_page.rs  library_page.rs  mod.rs  search_page.rs
