[package]
name = "shortwave"
version = "0.0.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"
rust_cast = "0.16"
mdns = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.7"
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }
indexmap = "1.8"
strum = "0.20"
strum_macros = "0.20"
diesel_migrations = "1.4"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
futures = "0.3"
futures-io = "0.3"
futures-util = "0.3"
async-std = "1.9"
isahc = { version = "1.1", features = ["json"] }
regex = "1.4"
thiserror = "1.0"
async-std-resolver = "0.20"
once_cell = "1.8"
rand = "0.8"
sanitize-filename = "0.3"
Inflector = "0.11"

gstreamer-audio = { version = "0.18", features = ["v1_10"]}
gstreamer = { version = "0.18"}
shumate = { version = "0.1.0", package = "libshumate"}
gettext-rs = { version = "0.7", features = ["gettext-system"] }
adw = { version = "0.2.0-alpha.3", package = "libadwaita", features = ["v1_2"] }
gtk = { version = "0.4", package = "gtk4" }
gtk-macros = "0.3"

[target.'cfg(unix)'.dependencies]
mpris-player = "0.6"
